// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with state: critical 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(245, 105, 84); caret-color: #f56954;"
  >
    assistant_photo
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with state: major 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(255, 153, 0); caret-color: #ff9900;"
  >
    assistant_photo
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with state: minor 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(252, 220, 0); caret-color: #fcdc00;"
  >
    assistant_photo
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with state: ok 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(0, 166, 90); caret-color: #00a65a;"
  >
    assistant_photo
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with status: cancelled 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(117, 117, 117); caret-color: #757575;"
  >
    highlight_off
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with status: closed 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(47, 171, 99); caret-color: #2fab63;"
  >
    check_circle_outline
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with status: flapping 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(43, 62, 79); caret-color: #2b3E4F;"
  >
    swap_vert
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with status: noEvents 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(255, 82, 82); caret-color: #ff5252;"
  >
    sync_problem
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with status: ongoing 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(249, 168, 37); caret-color: #f9A825;"
  >
    warning
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with status: stealthy 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(117, 117, 117); caret-color: #757575;"
  >
    swap_vert
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: ack 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(156, 39, 176); caret-color: #9c27b0;"
  >
    playlist_add_check
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: ackRemove 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(156, 39, 176); caret-color: #9c27b0;"
  >
    not_interested
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: assocTicket 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    local_play
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: autoInstructionAlreadyRunning 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: autoInstructionComplete 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: autoInstructionFail 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: autoInstructionStart 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: cancel 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    delete
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: changeState 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    thumbs_up_down
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: check 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light black--text"
  >
    clear
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: comment 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(186, 104, 200); caret-color: #ba68c8;"
  >
    comment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: createManualMetaAlarm 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    center_focus_strong
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: declareTicket 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    report_problem
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: declareTicketFail 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    report_problem
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: delete 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    delete
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: executeInstruction 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: fastAck 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    check
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: group 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light black--text"
  >
    clear
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: groupRequest 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    note_add
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionAbort 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionComplete 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionFail 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionJobAbort 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionJobComplete 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionJobFail 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionJobStart 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionPause 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionResume 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionStart 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    assignment
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: invalidate 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    thumb_down
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: junitTestCaseUpdate 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    keyboard_arrow_up
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: junitTestSuiteUpdate 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    keyboard_arrow_up
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: metaalarmattach 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(109, 76, 65); caret-color: #6d4c41;"
  >
    center_focus_weak
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: pause 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    pause
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: pbehaviorAdd 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    pause
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: pbehaviorList 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    list
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: pbhenter 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(24, 255, 255); caret-color: #18ffff;"
  >
    pause
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: pbhleave 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(24, 255, 255); caret-color: #18ffff;"
  >
    play_arrow
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: play 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    play_arrow
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: removeAlarmsFromManualMetaAlarm 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    link_off
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: snooze 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
    style="color: rgb(233, 30, 99); caret-color: #e91e63;"
  >
    alarm
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: statedec 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light black--text"
  >
    clear
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: stateinc 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light black--text"
  >
    clear
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: statusdec 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light black--text"
  >
    clear
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: statusinc 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light black--text"
  >
    clear
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: uncancel 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light black--text"
  >
    clear
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: unsooze 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light black--text"
  >
    clear
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: validate 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    thumb_up
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: webhookComplete 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    report_problem
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: webhookFail 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    report_problem
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: webhookStart 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap"
>
  <i
    aria-hidden="true"
    class="v-icon material-icons theme--light"
  >
    report_problem
  </i>
  <transition-stub
    name="fab-transition"
  >
    <span
      class="v-badge__badge transparent"
      style="display: none;"
    >
      <i
        aria-hidden="true"
        class="v-icon time-line-flag__badge-icon material-icons theme--light error--text"
        style="font-size: 14px;"
      >
        error
      </i>
    </span>
  </transition-stub>
</span>
`;
